# packet-spammer

./: .dockerignore  Dockerfile  README.md  build.sh  docker-compose.yml  host.sh  pyproject.toml  run.py
app/api/: routes.py
app/host/: runtime.py
app/models/: config.py
app/sender/: __init__.py  engine.py  interface.py  pool.py  utils.py
app/sender/packets/: __init__.py  auth.py  beacon.py  deauth.py  disassoc.py  factory.py  probe_req.py
app/sender/tasks/: __init__.py  base.py  beacon_seq.py  manager.py  span.py  standard.py
base/api/: __init__.py  routes.py  server.py
base/api/static/: index.html
base/config/: __init__.py  loader.py  models.py
config/: config.toml
